# MSrvManager

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  build.sh  msrvmanager.service  patch_server_props.sh  run.sh
.devcontainer/: build.sh  devcontainer.json  setup.sh
backend/: Cargo.toml  diesel_command.sh  start_dev.sh
backend/.cargo/: config.toml
backend/src/: graphql.rs  instance.rs  main.rs  messages.rs  model.rs  native.rs  rcon.rs  utils.rs
frontend/: .babelrc  .gitignore  entry.tsx  make_entry.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/src/: Alter.tsx  Create.tsx  Error.tsx  ErrorMessage.tsx  Hello.tsx  Index.tsx  Rcon.tsx  Renew.tsx  Test.tsx  globals.d.ts  lib.tsx  model.ts  schema_utils.ts
frontend/src/components/: Button.tsx  InstanceActions.tsx  InstanceDesc.tsx  Spinner.tsx  UIComps.tsx
frontend/src/web_components/: ErrorMessage.tsx  Hello.tsx
static/: .gitignore
templates/: base.html  error.html  index.html  page.html  user.html
