[package]
name = "msrvmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid  = {version="*", features=["v4","std"]}
askama = "0.12"

actix-web="4.9.0"
actix-cors="*"
dotenv="0.15.0"
anyhow="1"

log="^0.4.21"
simple_logger = "5.0.0"
askama_actix = "0.14.0"
actix-files = "0.6.6"
serde = "1.0.209"
serde_json = "1.0.127"

async-graphql = { version = "7.0.9", features = ["log","url"]}
async-graphql-actix-web = "7.0.9"
url = {version = "2.5.2", features = ["serde"]}

bit-set = "0.8.0"
actix = "0.13.5"
tokio = { version = "1.40.0", features = ["time"]}
procfs = { version = "0.16.0", default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate","deflate64","zstd","aes-crypto"] }
openssl = { version = "0.10.66", features = ["vendored"] }
